--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/98.css" /> -->
 </head>
 <body>
     
     <button id="start">Start</button>
+    <button id="stop">Stop</button>
     <div class="wrapper">
         <div id="tet-cont" class="tetris-container">
         </div>
