--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=3">
     <!-- <link rel="stylesheet" href="https://unpkg.com/98.css" /> -->
 </head>
 <body>
@@ -16,7 +16,21 @@
         <div id="tet-cont" class="tetris-container">
         </div>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
+
+
+
+    <template id="cellContent">
+        <div class="cell">
+            <div class="cell-lvl-1">
+                <div class="cell-lvl-2">
+                </div>
+            </div>
+        </div>
+    </template>
+
+
+
 
 </body>
 </html>
