--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css?v=3">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://unpkg.com/98.css" /> -->
 </head>
 <body>
     
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
+    <div>lobby</div>
     <div class="wrapper">
         <div id="tet-cont" class="tetris-container">
         </div>
     </div>
+    <div>
+        <button id="start">Start</button>
+        <button id="stop">Stop</button>
+        <div>
+            <span id="score"></span>
+        </div>
+    </div>
+
     <script type="module" src="main.js"></script>
 
 
